# egauge-async

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mypy.ini  pyproject.toml
.claude/agents/: egauge-api-schema-expert.md
.github/workflows/: deploy.yml  main.yml
egauge_async/: __init__.py  client.py  data_models.py  exceptions.py  utils.py
egauge_async/json/: auth.py  client.py  models.py  type_codes.py
examples/json/: README.md  current_measurements.py  historical_data_plot.py
test/: test_client.py  test_utils.py
test/json/: mocks.py  test_auth.py  test_client.py  test_json_client.py  test_json_client_integration.py  test_token_lifecycle.py
