[project]
name = "egauge-async"
version = "0.0.0"
description = "Async client for eGauge energy monitor (https://www.egauge.net)"
authors = [{ name = "Nic Eggert", email = "nic@eggert.io" }]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "httpx>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/neggert/egauge-async"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest-asyncio>=0.14.0,<0.15",
    "pytest-cov>=2.10.1,<3",
    "pytest-mock>=3.3.1,<4",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["egauge_async"]
strict = ["egauge_async"]

# files = "egauge_async"
# warn_return_any = true
# warn_unused_configs = true
